// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDMethod Successfully generates a class MD file 1`] = `
"# AABB

### <img src="../../.gitbook/assets/base.png" width="32" height="32" /> AABB
AABB's entry class<br>

-----------------
## Fields

| Type   | Name | Optional |
| ------ | ---- | -------: |
| [Vector](./readme/vector.md) | pos |  |
| [Vector](./readme/vector.md) | size |  |
|  | meep |  |
"
`;

exports[`MDMethod Successfully generates a extension MD file 1`] = `
"# ~~math.isNan~~

### <img src="../../.gitbook/assets/client.png" width="32" height="32" /> ~~math.isNan~~

> ⚠ Deprecated: Do not use this anymore

{% hint style="success" %} OH NOOOOOOO {% endhint %}


\`\`\`lua
boolean math.isNan(val)
\`\`\`

Returns true if the number is NaN (not a number)<br>It also does some other magic<br>

-----------------
## Parameters

| Type   | Name | Description | Optional |
| ------ | ---- | ----------- | -------: |
| number | val | No description |  |

-----------------
## Returns

| Type   | Description |
| ------ | ----------: |
| boolean | If its NaN |
"
`;

exports[`MDMethod Successfully generates a gvar MD file 1`] = `
"# _G.SERVER

### <img src="../../.gitbook/assets/global.png" width="32" height="32" /> **_G**.SERVER

{% hint style="info" %} For SHARED code, just don't check for SERVER or CLIENT {% endhint %}

Returns true if the current code is running on the SERVER<br>
"
`;

exports[`MDMethod Successfully generates a method MD file 1`] = `
"# [console](./readme/console.md):execute

### <img src="../../.gitbook/assets/shared.png" width="32" height="32" /> [console](./readme/console.md):execute

{% hint style="warning" %} PAGE / FUNCTIONALITY STILL IN CONSTRUCTION {% endhint %}
{% hint style="danger" %} OH NOOOOOOO {% endhint %}


\`\`\`lua
boolean, string console:execute(args)
\`\`\`

Executes a console command programmatically<br>
\`\`\`lua
--my_command is the command to execute, true is a parameter
console:execute({"my_command", "true"})
\`\`\`


-----------------
## Parameters

| Type   | Name | Description | Optional |
| ------ | ---- | ----------- | -------: |
| string[] | args | No description |  |

-----------------
## Returns

| Type   | Description |
| ------ | ----------: |
| boolean | If command was executed successfully |
| string | No description |
"
`;

exports[`MDMethod Successfully handles custom parsers 1`] = `
"## ![$SCOPE$](.gitbook/assets/$SCOPE$.png) $TITLE_NAME$

METHOD
"
`;

exports[`MDMethod Successfully handles custom parsers 2`] = `
"## ![shared](.gitbook/assets/shared.png) [console](./readme/console.md):execute

METHOD
"
`;

exports[`MDMethod Successfully handles missing fields 1`] = `
"# [console](./readme/console.md):execute

### <img src="../../.gitbook/assets/unknown.png" width="32" height="32" /> [console](./readme/console.md):execute

{% hint style="uhhhh" %} OH NOOOOOOO {% endhint %}


\`\`\`lua
void console:execute(args)
\`\`\`

Executes a console command programmatically<br>

-----------------
## Parameters

| Type   | Name | Description | Optional |
| ------ | ---- | ----------- | -------: |
| string[]" | "args | No description |  |
"
`;

exports[`MDMethod Successfully handles unknown fields 1`] = `
"##![Base](.gitbook/assets/base.png) $TITLES_B$

![$RANDOM$](.gitbook/assets/$RANDOM$.png)
$UNKNOWN_FIELD$
"
`;
